refactor frontend and rewrite readme
